UPDATE TO EXPRESS, DETAIL PAGE

--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "bugs": {
     "url": "https://github.com/jmgarza94/IT122/issues"
   },
-  "homepage": "https://github.com/jmgarza94/IT122#readme"
+  "homepage": "https://github.com/jmgarza94/IT122#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.0.0"
+  }
 }
