--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "my it122 class work",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint **/*.js",
+    "test": "mocha test/**"
   },
   "repository": {
     "type": "git",
@@ -25,5 +26,10 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.0.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "eslint": "^7.5.0",
+    "mocha": "^8.1.0"
   }
 }
