--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "express-handlebars": "^5.0.0"
+    "express-handlebars": "^5.0.0",
+    "mongoose": "^5.9.28"
   },
   "devDependencies": {
     "chai": "^4.2.0",
